wip container configuration and control
